<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_gravity="center"
        android:background="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/textA"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/silver"/>

        <EditText
            android:id="@+id/edit_textA"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/textB"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/silver"/>

        <EditText
            android:id="@+id/edit_textB"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/result"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:padding="8dp"
        android:background="@color/blue" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/plus"
        android:textSize="20sp"
        android:backgroundTint="@color/silver"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/sub"
        android:textSize="20sp"
        android:backgroundTint="@color/silver"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnMul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/multiple"
        android:textSize="20sp"
        android:backgroundTint="@color/silver"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/divide"
        android:textSize="20sp"
        android:backgroundTint="@color/silver"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnGCD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/gcd"
        android:textSize="20sp"
        android:backgroundTint="@color/silver"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/exit"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:backgroundTint="@color/silver"/>
</LinearLayout>